--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -22,3 +22,11 @@ jobs:
           plugin_followup_sections: repositories
           plugin_isocalendar: yes
           plugin_isocalendar_duration: half-year
+      - name: lang
+        uses: lowlighter/metrics@latest
+        with:
+          filename: lang.svg
+          token: ${{ secrets.METRICS_TOKEN }}
+          plugin_languages: yes
+          plugin_languages_indepth: yes
+       
