--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -28,5 +28,7 @@ jobs:
           filename: lang.svg
           token: ${{ secrets.METRICS_TOKEN }}
           plugin_languages: yes
-          plugin_languages_indepth: yes
+          plugin_languages_sections: recently-used
+          plugin_languages_recent_load: 400
+          plugin_languages_recent_days: 14
        
