--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -30,5 +30,6 @@ jobs:
           plugin_languages: yes
           plugin_languages_sections: recently-used
           plugin_languages_recent_load: 400
-          plugin_languages_recent_days: 14
+          plugin_languages_recent_days: 30
+          plugin_languages_ignored: html, css
        
