--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -21,7 +21,7 @@ jobs:
           SHOW_PROJECTS: "True"
           SHOW_TIMEZONE: "False"
           SHOW_SHORT_INFO: "False"
-          SYMBOL_VERSION: "False"
+          SHOW_LOC_CHART: "False"
           SHOW_PROFILE_VIEWS: "False"
           SHOW_TOTAL_CODE_TIME: "False"
           SHOW_COMMIT: "False"
